cilium-networkpolicies/tailscale/tailscale-egress-host.yaml
# allows provisioning helper pods/services
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: tailscale-egress-host
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels: {}
  egress:
  - toEntities:
    - host  # Allow to host (includes API server)
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
