cilium-networkpolicies/tailscale/tailscale-ssdp.yaml
# allows provisioning helper pods/services
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: tailscale-ssdp
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels: {}
  egress:
    - toCIDRSet:
        - cidr: 239.255.255.250/32
      toPorts:
        - ports:
            - port: "1900"
              protocol: UDP
